Bot retrieves a random gif image matching the user message

--- a/.gitignore
+++ b/.gitignore
@@ -163,6 +163,9 @@ PublishScripts/
 *.nuget.props
 *.nuget.targets
 
+# web.config file
+Web.config
+
 # Microsoft Azure Build Output
 csx/
 *.build.csdef
